<resources>
    <string name="app_name">RoomTest</string>
    <string name="str_price_format">Precio: %1$,.2f</string>
    <string name="str_sku_format">SKU: %s</string>
    <string name="str_description_format">Descripción: %s</string>
    <string name="message">Mensaje</string>
    <string name="title">Info.</string>
    <string name="str_ok">Ok</string>
    <string name="accept_permissions">Acepta los permisos</string>
    <string name="empty_sku">No deje sku vacio</string>
    <string name="sku_less_characters">el sku debe contener 16 caracteres</string>
    <string name="empty_price">Coloque un precio valido</string>
    <string name="empty_description">No deje la descipcion vacia</string>
    <string name="take_photo">Tome una foto del producto</string>
    <string name="product_registered">Producto registrado correctamente</string>
    <string name="do_not_capture_image">No capturaste una imagen :(</string>
    <string name="title_form">Formulario del Producto</string>
    <string name="products_list">Lista de Productos</string>
    <string name="instructions">Por favor da click en la imagen de la camara para agregar una foto del producto</string>
    <string name="sku">Sku</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="field_required">Campo Requerido</string>
    <string name="add_products">Agregar Productos</string>
    <string name="str_no">No</string>
    <string name="str_yes">Sí</string>
</resources>